fix(accordion): remove outside spacing from mobile light accordion (#449)

--- a/projects/ng-aquila/src/accordion/expansion-panel.scss
+++ b/projects/ng-aquila/src/accordion/expansion-panel.scss
@@ -62,10 +62,6 @@
 
 // Styles of the light version
 :host(.nx-expansion-panel--light) {
-    @include media-breakpoint-down(small) {
-        margin: 0 nx-spacer(s);
-    }
-
     .nx-expansion-panel__body {
         padding: v(accordion-light-body-padding);
 
